Fix Work With Us dropdown bug on mobile

--- a/wp-content/themes/environics/assets/sass/site/_media-queries.scss
+++ b/wp-content/themes/environics/assets/sass/site/_media-queries.scss
@@ -862,6 +862,10 @@
 			.dropdown {
 				padding-bottom: 4rem;
 
+				.one .span_6, .two .span_6, .three .span_6 {
+					margin-left: 0;
+				}
+
 				.span_7 {
 					width: auto;
 				}
